# nosis

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  todo.md
.github/workflows/: ci.yml
nosis/: __init__.py  __main__.py  bdd.py  blackbox.py  boolopt.py  bram.py  carry.py  cli.py  clocks.py  cone.py  congestion.py  constraints.py  cse.py  cutmap.py  diff.py  dontcare.py  dsp.py  ecp5_prims.sv  equiv.py  eval.py  formal.py  frontend.py  fsm.py  hierarchy.py  incremental.py  ir.py  json_backend.py  lower.py  lutpack.py  parse.py  passes.py  pnr_feedback.py  postsynth.py  power.py  readmem.py  reqmerge.py  resources.py  retiming.py  satconst.py  sdc.py  (+9 more)
nosis/passes/: __init__.py  constff.py  dce.py  equiv.py  folding.py  identity.py  misc.py  mux.py  pipeline.py
nosis/techmap/: __init__.py  mapper.py  netlist.py
tests/: conftest.py  test_analysis.py  test_blackbox.py  test_boolopt.py  test_bram.py  test_carry.py  test_cli.py  test_clocks.py  test_cone.py  test_congestion.py  test_connectivity.py  test_constraints.py  test_cpu.py  test_cse.py  test_cutmap.py  test_designs.py  test_diff.py  test_dontcare.py  test_dsp.py  test_equiv.py  test_eval.py  test_formal.py  test_frontend.py  test_fsm.py  test_gaps.py  test_hardware_regression.py  test_hierarchy.py  test_incremental.py  test_ir.py  test_json_backend.py  test_lutpack.py  test_mapping.py  test_mutation.py  test_mux_merge.py  test_nextpnr.py  test_ops.py  test_passes.py  test_pipeline.py  test_pnr_feedback.py  test_postsynth.py  (+20 more)
tests/designs/: casez_test.sv  (+12 more)
