[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nosis"
version = "0.1.0"
description = "Correctness-first FPGA synthesis targeting ECP5"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["pyslang>=7"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "hypothesis", "mypy"]
docs = ["pdoc"]

[project.scripts]
nosis = "nosis.cli:main"

[tool.setuptools.packages.find]
include = ["nosis*"]

[tool.ruff]
target-version = "py311"
line-length = 160

[tool.ruff.lint]
select = ["F", "E", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
